kubernetes/microblog/microblog-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: microblog  # Give a unique name to your service
spec:
  type: LoadBalancer  # Assuming you want to expose it externally
  selector:
    app: microblog
  ports:
    - port: 80         # Port exposed by the service
      targetPort: 5000 # Port on the container where the application listens
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: microblog
spec:
  replicas: 2  # Define the number of replicas (optional)
  selector:
    matchLabels:
      app: microblog
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - name: microblog-container
        image: linnea123/microblog:latest  # The Docker image to deploy
        ports:
        - containerPort: 5000  # Port that the application listens on
