kubernetes/microblog/microblog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: microblog
